--- a/amazonclone/src/Login.css
+++ b/amazonclone/src/Login.css
@@ -13,6 +13,7 @@
   margin-right: auto;
   margin-left: auto;
 }
+
 .login__container {
   width: 350px;
   height: fit-content;
@@ -29,6 +30,7 @@
 
 .login__container > form > h3 {
   margin-bottom: 5px;
+  font-weight: 600;
 }
 
 .login__container > form > input {
@@ -55,6 +57,7 @@
   margin-top: 10px;
   font-size: 15px;
   font-weight: 600;
+  cursor: pointer;
 }
 
 .login__registerButton {
@@ -66,4 +69,5 @@
   margin-top: 10px;
   font-size: 15px;
   font-weight: 600;
+  cursor: pointer;
 }
